try fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,7 @@ section {
 }
 
 .hero h1 {
-  margin: 0;
+  margin-top: 10;
   font-size: 30px;
   font-weight: 600;
   color: #012970;
